# FrankaTeleop

./: .gitignore  README.md  citations.txt
cv_franka_bridge/: package.xml  setup.cfg  setup.py
cv_franka_bridge/config/: integrate.rviz  integrate_servo.rviz
cv_franka_bridge/cv_franka_bridge/: cv_franka_bridge.py
cv_franka_bridge/launch/: integrate.launch.py  integrate_servo.launch.py
franka_moveit/: CMakeLists.txt  package.xml
franka_moveit/src/: franka_moveit.cpp
franka_teleop/: CMakeLists.txt  package.xml
franka_teleop/config/: hand.xacro  kinematics.yaml  moveit.rviz  ompl_planning.yaml  panda_arm.ros2_control.xacro  panda_arm.srdf  panda_arm.urdf  panda_arm.urdf.xacro  panda_mock_controllers.yaml  servo.rviz
franka_teleop/launch/: franka_moveit.launch.py  franka_msr.launch.py  franka_new.launch.py  franka_rviz.launch.py  franka_servo.launch.py  franka_teleop.launch.py
franka_teleop/src/: franka_servo.cpp  franka_servo_demo.cpp  franka_servo_fake.cpp  franka_servo_real.cpp  franka_teleop.cpp
franka_teleop/srv/: PlanPath.srv
hand_interfaces/: CMakeLists.txt  package.xml
hand_interfaces/msg/: Pinch.msg
handcv/: package.xml  setup.cfg  setup.py
handcv/config/: handcv.rviz  high_density_preset.json
handcv/handcv/: handcv.py  mediapipehelper.py  mediapipelib.py  realsensehelper.py
handcv/launch/: camera.launch.py
msr_franka_moveit_config/: CMakeLists.txt  package.xml
msr_franka_moveit_config/config/: panda.srdf  panda.urdf.xacro  ros2_controllers.yaml
msr_franka_moveit_config/launch/: rsp.launch.py  static_virtual_joint_tfs.launch.py
numsr_franka_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
numsr_franka_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  moveit_cpp.yaml  panda.urdf.xacro  panda_arm.ros2_control.xacro  panda_arm.urdf  panda_arm_fake.urdf.xacro  panda_arm_real.urdf  panda_arm_real.urdf.xacro  panda_controllers.yaml  panda_mock_controllers.yaml  panda_ros_controllers.yaml  panda_simulated_config.yaml
numsr_franka_moveit_config/launch/: demo.launch.py  moveit_rviz.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py
realsenselib/: README.md  pen_recognition.py  robot_control.py
